# siapopr

./: .gitignore  DESCRIPTION  NAMESPACE  README.Rmd  README.md  cleanup  configure  configure.ac  siapopTimeDependent
R/: RcppExports.R  convert.R  customize.R  deleteme.R  import.R  sample.R  siapopr.R  utils.R
inst/extras/: Makevars  Makevars.in  Makevars.win  custom_newclone_plugin.cpp  custom_newclone_template.cpp  custom_newclone_template.h  customdist_plugin.cpp  customdist_template.cpp  customdist_template.h
man/: compile_custom_fitness.Rd  compile_custom_newclone.Rd  convert_fishplot.Rd  convert_ggmuller.Rd  convert_igraph.Rd  create_Muller_df.Rd  create_adj_matrix.Rd  create_fitness_template.Rd  create_newclone_template.Rd  create_sample_adj_matrix.Rd  dot-create_edge.list.Rd  dot-match_parents.Rd  dot-parent_age_at_split.Rd  dot-replace.Rd  dot-split_replace_collapse.Rd  import_clonedata.Rd  import_sampledata.Rd  import_siapop.Rd  import_simdata.Rd  import_timedata.Rd  reload.Rd  sample_alleles.Rd  sample_cells.Rd  siapop.Rd  siapopConstant.Rd  siapopNoMut.Rd  siapopSimple.Rd  siapopTD.Rd  siapopTimeDep.Rd  siapopr.Rd
src/: Makevars.in  Makevars.win  RcppExports.cpp  constantCloneList.cpp  constantCloneList.h  constantParameterList.cpp  constantRVFunctions.cpp  siapopConstant.cpp  siapopSimple.cpp  siapopTimeDep.cpp  simpleCloneList.cpp  simpleGlobalStructs.h  simpleParameterList.cpp  timedepCloneList.cpp  timedepParameterList.cpp  timedepParameterList.h  timedepRVFunctions.cpp
vignettes/: Plugins.Rmd  Running siapopr.Rmd  Running.Rmd
(+25 files in other folders)
